--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Roboto', serif;
+}
+.navbar {
+  border-style: double;
+  display: flex;
+  justify-content: start;
+  // max-width: 30%;
+}
+.navlist {
+  cursor: pointer;
+  list-style: none;
+  margin-bottom: 20px;
+}
+a {
+  text-decoration: none;
+}
+.active {
+  color: green;
+}
+.btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 6px 14px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-size: 18px;
+  background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
+  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+
+}
+
+.btn::before {
+  background-color: initial;
+  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+  border-radius: 125px;
+  content: "";
+  height: 50%;
+  left: 4%;
+  opacity: .5;
+  top: 0;
+  transition: all .3s;
+  width: 92%;
+}
+.btn:hover {
+  box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  transform: scale(1.05);
+}
